Add Adrià talk description

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
 
 	<style>
-		table,
+		table{
+			width: 800px;
+			text-align: center;
+		}
 		th,
 		td {
 			border: 0px solid black;
@@ -38,7 +41,7 @@
 		}
 
 		.table-container {
-			width: max-content;
+			width: 800px;
 			margin: 0 auto;
 
 		}
@@ -136,9 +139,13 @@
 			</tr>
 			<tr>
 				<td>16.40h - 17.10h</td>
-				<td><!--Presentation 4 title--></td>
-				<td>Adrià Torralba</td>
-				<td><!--Brief description 4--></td>
+				<td>Understanding KZG Commitments</td>
+				<td>Adrià Torralba-Agell</td>
+				<td>Commitments play a pivotal role in the ongoing developments of Zero-Knowledge Proofs. 
+					Specifically, KZG commitments, which represent a polynomial commitment scheme requiring a trusted setup, 
+					are crucial due to their application in numerous Zero-Knowledge frameworks like PLONK. 
+					Moreover, Proto-Danksharding, also known as EIP-4844, an essential Ethereum Improvement Proposal 
+					focusing on Data Availability, has already incorporated KZG as its commitment scheme.</td>
 			</tr>
 			<tr class="break-row">
 				<td>17.10h - 17.20h</td>
