Add Javier and Héctor talk descriptions, add min-width to columns to avoid cropping to short

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 	<div class="table-container">
 		<table style="text-align: center;">
 			<tr>
-				<th>Time</th>
-				<th>Title</th>
-				<th>Speaker</th>
+				<th style="min-width:120px;">Time</th>
+				<th style="min-width:200px;">Title</th>
+				<th style="min-width:150px;">Speaker</th>
 				<th>Description</th>
 				<!-- <th>Recommended read before the talk</th> -->
 			</tr>
@@ -125,7 +125,7 @@
 				<td>15.30h - 16.00h</td>
 				<td>How to get pairings in a zkEVM</td>
 				<td>Héctor Masip Ardevol</td>
-				<td><!--Brief description 2--></td>
+				<td>While initially devised for cryptanalysis, pairings are now fundamental in many cryptographic protocols where no other efficient alternative exists. However, despite their widespread use, pairings still remain a mystery for many practitioners. In this talk, we aim to demystify them by explaining their implementation within Polygon's zkEVM, which presents considerable resource restrictions for such feat.</td>
 			</tr>
 			<tr class="break-row">
 				<td>16.00h - 16.10h</td>
@@ -155,13 +155,13 @@
 				<td>17.20h - 17.50h</td>
 				<td>Review of RISCV zkVMs</td>
 				<td>Eduard</td>
-				<td>We will review what is a RISCV zkVM and compare some of the current projects working on this solution</td>
+				<td>We will review what is a RISCV zkVM and compare some of the current projects working on this solution.</td>
 			</tr>
 			<tr>
 				<td>17.50h - 18.20h</td>
-				<td>Quantifying Security</td>
+				<td>Quantifying Security, Where does security come from?</td>
 				<td>Javier Silva</td>
-				<td><!--Brief description 6--></td>
+				<td>We often hear that a certain proof system is targeting 80-bit security, or that a certain elliptic curve has around 100-bit security. In this introductory talk, I will discuss exactly what these security levels measure, and how they are determined. In particular, I will focus on modern proof systems, and how different choices in the design can influence the final security level.</td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
 				<td>18.20h - 21.00h</td>
