bold talk titles, smaller hours time to better fit table in screen

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 			margin: 0 auto;
 
 		}
+		.hours{
+			font-size:85%;
+		}
 
 		footer {
 			border-top: 1px solid #000;
@@ -100,46 +103,46 @@
 	<div class="table-container">
 		<table style="text-align: center;">
 			<tr>
-				<th style="min-width:120px;">Time</th>
+				<th style="min-width:100px;">Time</th>
 				<th style="min-width:200px;">Title</th>
-				<th style="min-width:150px;">Speaker</th>
+				<th style="min-width:130px;">Speaker</th>
 				<th>Description</th>
 				<!-- <th>Recommended read before the talk</th> -->
 			</tr>
 			<tr style="border-top: 2px solid black;">
-				<td style="text-align: center;">14.00h</td>
+				<td style="text-align: center;" class="hours">14.00h</td>
 				<td style="text-align: center;" colspan="3">Doors open</td>
 			</tr>
 			<tr style="border-bottom: 3px double black;">
-				<td style="text-align: center;">14.45h</td>
+				<td style="text-align: center;" class="hours">14.45h</td>
 				<td style="text-align: center;" colspan="3"><b>Welcome to Barcelona zkDay 2024</b></td>
 			</tr>
 
 			<tr>
-				<td>15.00h - 15.30h</td>
-				<td>Recursion in zk(E)VMs</td>
+				<td class="hours">15.00h - 15.30h</td>
+				<td style="font-weight:bold;">Recursion in zk(E)VMs</td>
 				<td>Jordi Baylina</td>
 				<td></td>
 			</tr>
 			<tr>
-				<td>15.30h - 16.00h</td>
-				<td>How to get pairings in a zkEVM</td>
+				<td class="hours">15.30h - 16.00h</td>
+				<td style="font-weight:bold;">How to get pairings in a zkEVM</td>
 				<td>Héctor Masip Ardevol</td>
 				<td>While initially devised for cryptanalysis, pairings are now fundamental in many cryptographic protocols where no other efficient alternative exists. However, despite their widespread use, pairings still remain a mystery for many practitioners. In this talk, we aim to demystify them by explaining their implementation within Polygon's zkEVM, which presents considerable resource restrictions for such feat.</td>
 			</tr>
 			<tr class="break-row">
-				<td>16.00h - 16.10h</td>
+				<td class="hours">16.00h - 16.10h</td>
 				<td colspan="3">Break (10 minutes)</td>
 			</tr>
 			<tr>
-				<td>16.10h - 16.40h</td>
-				<td>Privacy in DeFI</td>
+				<td class="hours">16.10h - 16.40h</td>
+				<td style="font-weight:bold;">Privacy in DeFI</td>
 				<td>Ying tong</td>
 				<td><!--Brief description 3--></td>
 			</tr>
 			<tr>
-				<td>16.40h - 17.10h</td>
-				<td>Understanding KZG Commitments</td>
+				<td class="hours">16.40h - 17.10h</td>
+				<td style="font-weight:bold;">Understanding KZG Commitments</td>
 				<td>Adrià Torralba-Agell</td>
 				<td>Commitments play a pivotal role in the ongoing developments of Zero-Knowledge Proofs. 
 					Specifically, KZG commitments, which represent a polynomial commitment scheme requiring a trusted setup, 
@@ -148,27 +151,27 @@
 					focusing on Data Availability, has already incorporated KZG as its commitment scheme.</td>
 			</tr>
 			<tr class="break-row">
-				<td>17.10h - 17.20h</td>
+				<td class="hours">17.10h - 17.20h</td>
 				<td colspan="3">Break (10 minutes)</td>
 			</tr>
 			<tr>
-				<td>17.20h - 17.50h</td>
-				<td>Review of RISCV zkVMs</td>
+				<td class="hours">17.20h - 17.50h</td>
+				<td style="font-weight:bold;">Review of RISCV zkVMs</td>
 				<td>Eduard</td>
 				<td>We will review what is a RISCV zkVM and compare some of the current projects working on this solution.</td>
 			</tr>
 			<tr>
-				<td>17.50h - 18.20h</td>
-				<td>Quantifying Security, Where does security come from?</td>
+				<td class="hours">17.50h - 18.20h</td>
+				<td style="font-weight:bold;">Where does security come from?</td>
 				<td>Javier Silva</td>
 				<td>We often hear that a certain proof system is targeting 80-bit security, or that a certain elliptic curve has around 100-bit security. In this introductory talk, I will discuss exactly what these security levels measure, and how they are determined. In particular, I will focus on modern proof systems, and how different choices in the design can influence the final security level.</td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
-				<td>18.20h - 21.00h</td>
+				<td class="hours">18.20h - 21.00h</td>
 				<td colspan="3">Closing remarks and drinks</td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
-				<td>21.00h</td>
+				<td class="hours">21.00h</td>
 				<td colspan="3">Dinner at restaurant</td>
 			</tr>
 		</table>
