--- a/index.html
+++ b/index.html
@@ -81,19 +81,21 @@
 	</div>
 
 	<h2>Speakers</h2>
-
-	<a target="_blank" href="https://twitter.com/jbaylina">
-		Jordi Baylina</a>, Polygon zkEVM<br>
-	<a target="_blank" href="https://hecmas.github.io/">
-		Héctor Masip Ardevol</a>, Polygon zkEVM & UPC (Polytechnic University of Catalonia)<br>
-	<a target="_blank" href="https://0xadriatorralba.github.io/">
-		Adrià Torralba-Agell</a>, UOC (Open University of Catalonia)<br>
-	<a target="_blank" href="https://github.com/ed255">
-		Eduard</a>, PSE zkEVM<br>
-	<a target="_blank" href="https://www.linkedin.com/in/javier-silva-800486270/">
-		Javier Silva</a>, =nil; Foundation<br>
-	<a target="_blank" href="https://twitter.com/therealyingtong">
-		Ying Tong</a><br>
+	
+	<ul>
+		<li><a target="_blank" href="https://twitter.com/jbaylina">
+			Jordi Baylina</a>, Polygon zkEVM<br></li>
+		<li><a target="_blank" href="https://hecmas.github.io/">
+			Héctor Masip Ardevol</a>, Polygon zkEVM & UPC (Polytechnic University of Catalonia)<br>
+		<li><a target="_blank" href="https://0xadriatorralba.github.io/">
+			Adrià Torralba-Agell</a>, UOC (Open University of Catalonia)<br></li>
+		<li><a target="_blank" href="https://github.com/ed255">
+			Eduard</a>, PSE zkEVM<br></li>
+		<li><a target="_blank" href="https://www.linkedin.com/in/javier-silva-800486270/">
+			Javier Silva</a>, =nil; Foundation<br></li>
+		<li><a target="_blank" href="https://twitter.com/therealyingtong">
+			Ying Tong</a><br></li>
+	</ul>
 
 
 	<h2>Schedule (to be defined)</h2>
@@ -122,7 +124,7 @@
 				<td class="hours">15.00h - 15.30h</td>
 				<td style="font-weight:bold;">Recursion in zk(E)VMs</td>
 				<td>Jordi Baylina</td>
-				<td></td>
+				<td>[TBA]</td>
 			</tr>
 			<tr>
 				<td class="hours">15.30h - 16.00h</td>
@@ -136,19 +138,19 @@
 			</tr>
 			<tr>
 				<td class="hours">16.10h - 16.40h</td>
-				<td style="font-weight:bold;">Privacy in DeFI</td>
-				<td>Ying tong</td>
-				<td><!--Brief description 3--></td>
+				<td style="font-weight:bold;">Next-generation lookup arguments</td>
+				<td>Ying Tong</td>
+				<td>A comparison of newer lookup arguments and their use-cases, including benchmarks from experimental halo2 implementations. In particular, we consider the optimisations available for fixed vs. dynamic lookups, and monolithic vs. decomposable lookups.</td>
 			</tr>
 			<tr>
 				<td class="hours">16.40h - 17.10h</td>
-				<td style="font-weight:bold;">Understanding KZG Commitments</td>
+				<td style="font-weight:bold;">Understanding KZG commitments</td>
 				<td>Adrià Torralba-Agell</td>
-				<td>Commitments play a pivotal role in the ongoing developments of Zero-Knowledge Proofs. 
+				<td>Commitments play a pivotal role in the ongoing developments of zero-knowledge proofs. 
 					Specifically, KZG commitments, which represent a polynomial commitment scheme requiring a trusted setup, 
-					are crucial due to their application in numerous Zero-Knowledge frameworks like PLONK. 
-					Moreover, Proto-Danksharding, also known as EIP-4844, an essential Ethereum Improvement Proposal 
-					focusing on Data Availability, has already incorporated KZG as its commitment scheme.</td>
+					are crucial due to their application in numerous zero-knowledge frameworks like PlonK. 
+					Moreover, proto-danksharding, also known as EIP-4844, an essential Ethereum Improvement Proposal 
+					focusing on data availability, has already incorporated KZG as its commitment scheme.</td>
 			</tr>
 			<tr class="break-row">
 				<td class="hours">17.10h - 17.20h</td>
@@ -180,7 +182,7 @@
 
 
 	<h2>Venue</h2>
-	The venue for this event is the <b><a href="https://akasha.barcelona" target="_blank">Akasha Hub Barcelona.</a></b><br>
+	The venue for this event is the <b><a href="https://akasha.barcelona" target="_blank">Akasha Hub Barcelona</a></b>.<br>
 
 	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
@@ -207,7 +209,7 @@
 		class="sidenote-toggle sidenote-number"></label>
 	<input type="checkbox" id="sn-1" class="sidenote-toggle" />
 	<span class="sidenote">Name and email are mandatory, you can use pseoudonyms, but we will use the email to communicate updates of the event.</span>
-
+	.
 
 
 	<h2>Sponsors</h2>
