Add Ying Tong affiliation

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<li><a target="_blank" href="https://www.linkedin.com/in/javier-silva-800486270/">
 			Javier Silva</a>, =nil; Foundation<br></li>
 		<li><a target="_blank" href="https://twitter.com/therealyingtong">
-			Ying Tong</a><br></li>
+			Ying Tong</a>, Geometry<br></li>
 	</ul>
 
 
