--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 			Javier Silva</a>, =nil; Foundation<br></li>
 		<li><a target="_blank" href="https://twitter.com/therealyingtong">
 			Ying Tong</a>, Geometry<br></li>
+		<li><a target="_blank" href="https://twitter.com/arnaucube">
+			Arnau Cube</a>, 0xPARC<br></li>
 	</ul>
 
 
@@ -144,13 +146,9 @@
 			</tr>
 			<tr>
 				<td class="hours">16.40h - 17.10h</td>
-				<td style="font-weight:bold;">Understanding KZG commitments</td>
-				<td>Adrià Torralba-Agell</td>
-				<td>Commitments play a pivotal role in the ongoing developments of zero-knowledge proofs. 
-					Specifically, KZG commitments, which represent a polynomial commitment scheme requiring a trusted setup, 
-					are crucial due to their application in numerous zero-knowledge frameworks like PlonK. 
-					Moreover, proto-danksharding, also known as EIP-4844, an essential Ethereum Improvement Proposal 
-					focusing on data availability, has already incorporated KZG as its commitment scheme.</td>
+				<td style="font-weight:bold;">The Sonobe folding library</td>
+				<td>Arnau Cube</td>
+				<td>TBD</td>
 			</tr>
 			<tr class="break-row">
 				<td class="hours">17.10h - 17.20h</td>
@@ -167,6 +165,16 @@
 				<td style="font-weight:bold;">Where does security come from?</td>
 				<td>Javier Silva</td>
 				<td>We often hear that a certain proof system is targeting 80-bit security, or that a certain elliptic curve has around 100-bit security. In this introductory talk, I will discuss exactly what these security levels measure, and how they are determined. In particular, I will focus on modern proof systems, and how different choices in the design can influence the final security level.</td>
+			</tr>
+			<tr>
+				<td class="hours">18.20h - 19.00h</td>
+				<td style="font-weight:bold;">Understanding KZG commitments workshop</td>
+				<td>Adrià Torralba-Agell</td>
+				<td>Commitments play a pivotal role in the ongoing developments of zero-knowledge proofs. 
+					Specifically, KZG commitments, which represent a polynomial commitment scheme requiring a trusted setup, 
+					are crucial due to their application in numerous zero-knowledge frameworks like PlonK. 
+					Moreover, proto-danksharding, also known as EIP-4844, an essential Ethereum Improvement Proposal 
+					focusing on data availability, has already incorporated KZG as its commitment scheme.</td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
 				<td class="hours">18.20h - 21.00h</td>
