--- a/index.html
+++ b/index.html
@@ -166,8 +166,12 @@
 				<td>Javier Silva</td>
 				<td>We often hear that a certain proof system is targeting 80-bit security, or that a certain elliptic curve has around 100-bit security. In this introductory talk, I will discuss exactly what these security levels measure, and how they are determined. In particular, I will focus on modern proof systems, and how different choices in the design can influence the final security level.</td>
 			</tr>
+			<tr class="break-row">
+				<td class="hours">18.20h - 18.30h</td>
+				<td colspan="3">Break (10 minutes)</td>
+			</tr>
 			<tr>
-				<td class="hours">18.20h - 19.00h</td>
+				<td class="hours">18.30h - 19.15h</td>
 				<td style="font-weight:bold;">Understanding KZG commitments workshop</td>
 				<td>Adrià Torralba-Agell</td>
 				<td>Commitments play a pivotal role in the ongoing developments of zero-knowledge proofs. 
@@ -177,7 +181,7 @@
 					focusing on data availability, has already incorporated KZG as its commitment scheme.</td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
-				<td class="hours">18.20h - 21.00h</td>
+				<td class="hours">19.15h - 21.00h</td>
 				<td colspan="3">Closing remarks and drinks</td>
 			</tr>
 			<tr class="break-row" style="border-bottom: 2px solid black;">
