--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 			</tr>
 			<tr>
 				<td class="hours">16.40h - 17.10h</td>
-				<td style="font-weight:bold;">The Sonobe folding library</td>
+				<td style="font-weight:bold;">Anatomy of a folding scheme</td>
 				<td>Arnau Cube</td>
-				<td>TBD</td>
+				<td>Overview of the theory behind folding schemes, and how we prove the IVC inside a zkSNARK that can be verified in Ethereum's EVM. Finally we will show a practical example using Sonobe library.</td>
 			</tr>
 			<tr class="break-row">
 				<td class="hours">17.10h - 17.20h</td>
