--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
 	</ul>
 
 
-	<h2>Schedule (to be defined)</h2>
-	
-	WIP: order is not definitive, we're just filling the titles and descriptions for the moment.
+	<h2>Schedule</h2>
 
 	<div class="table-container">
 		<table style="text-align: center;">
