add Akasha address in body to make it easier to copy

--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
 
 
 	<h2>Venue</h2>
-	The venue for this event is the <b><a href="https://akasha.barcelona" target="_blank">Akasha Hub Barcelona</a></b>.<br>
+	The venue for this event is the <b><a href="https://akasha.barcelona" target="_blank">Akasha Hub Barcelona</a></b>,<br>at <span style="font-weight:bold;">Carrer de la Verneda, 19, Local 1, 08018 Barcelona</span>.
+	<br>
 
 	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
